--- a/rtl/darwin/Makefile
+++ b/rtl/darwin/Makefile
@@ -971,34 +971,34 @@ ifeq ($(CPU_OS_TARGET),aarch64-ios)
 override TARGET_IMPLICITUNITS+=$(EXEINFOUNIT) $(CP_UNITS) $(UNICODEDATAUNIT)
 endif
 ifeq ($(CPU_OS_TARGET),i386-darwin)
-override TARGET_RSTS+=math typinfo classes sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo classes sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),i386-iphonesim)
-override TARGET_RSTS+=math typinfo classes sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo classes sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),powerpc-darwin)
-override TARGET_RSTS+=math typinfo classes sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo classes sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),x86_64-darwin)
-override TARGET_RSTS+=math typinfo classes sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo classes sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),x86_64-iphonesim)
-override TARGET_RSTS+=math typinfo classes sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo classes sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),arm-ios)
-override TARGET_RSTS+=math typinfo classes sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo classes sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),powerpc64-darwin)
-override TARGET_RSTS+=math typinfo classes sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo classes sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),aarch64-darwin)
-override TARGET_RSTS+=math typinfo classes sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo classes sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),aarch64-iphonesim)
-override TARGET_RSTS+=math typinfo classes sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo classes sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),aarch64-ios)
-override TARGET_RSTS+=math typinfo classes sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo classes sysconst rtlconsts
 endif
 override INSTALL_FPCPACKAGE=y y
 ifeq ($(CPU_OS_TARGET),i386-darwin)
@@ -2487,7 +2487,7 @@ linuxvcs$(PPUEXT): $(LINUXVCS_DEPS)
 	$(COMPILER) $(LINUXVCS_OPT) $<
 LinuxApi.Vcs$(PPUEXT): $(NSOSDIR)/LinuxApi.Vcs.pp $(LINUXVCS_DEPS)
 	$(COMPILER) $(LINUXVCS_OPT) $<
-FPCYLIX_DEPS=fpcylix.pp \
+FPCYLIX_DEPS=../linux/fpcylix.pp \
 	     $(CTHREADSUNIT)$(PPUEXT) $(CWSTRINGUNIT)$(PPUEXT) $(DYNLIBSUNIT)$(PPUEXT) \
 	     objpas$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
 	     $(FPCYLIX_DEPS_OS)  $(FPCYLIX_DEPS_CPU)
@@ -2544,7 +2544,7 @@ character$(PPUEXT): $(CHARACTER_DEPS)
 	$(COMPILER) $(CHARACTER_OPT) $<
 System.Character$(PPUEXT): $(NSINC)/System.Character.pas $(CHARACTER_DEPS)
 	$(COMPILER) $(CHARACTER_OPT) -Fi$(OBJPASDIR) $<
-MATH_DEPS= $(OBJPASDIR)/math.pp \
+MATH_DEPS= $(OBJPASDIR)/math.pp $(PROCINC)/mathu.inc \
 	   objpas$(PPUEXT) $(SYSUTILSUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
 	   $(MATH_DEPS_OS) $(MATH_DEPS_CPU)
 math$(PPUEXT): $(MATH_DEPS)
