--- a/rtl/linux/Makefile
+++ b/rtl/linux/Makefile
@@ -1122,58 +1122,58 @@ ifeq ($(CPU_OS_TARGET),loongarch64-linux)
 override TARGET_LOADERS+=$(LOADERS)
 endif
 ifeq ($(CPU_OS_TARGET),i386-linux)
-override TARGET_RSTS+=math typinfo sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),m68k-linux)
-override TARGET_RSTS+=math typinfo sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),powerpc-linux)
-override TARGET_RSTS+=math typinfo sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),sparc-linux)
-override TARGET_RSTS+=math typinfo sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),x86_64-linux)
-override TARGET_RSTS+=math typinfo sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),arm-linux)
-override TARGET_RSTS+=math typinfo sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),powerpc64-linux)
-override TARGET_RSTS+=math typinfo sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),armeb-linux)
-override TARGET_RSTS+=math typinfo sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),mips-linux)
-override TARGET_RSTS+=math typinfo sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),mipsel-linux)
-override TARGET_RSTS+=math typinfo sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),mips64-linux)
-override TARGET_RSTS+=math typinfo sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),mips64el-linux)
-override TARGET_RSTS+=math typinfo sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),aarch64-linux)
-override TARGET_RSTS+=math typinfo sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),sparc64-linux)
-override TARGET_RSTS+=math typinfo sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),riscv32-linux)
-override TARGET_RSTS+=math typinfo sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),riscv64-linux)
-override TARGET_RSTS+=math typinfo sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),xtensa-linux)
-override TARGET_RSTS+=math typinfo sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),loongarch64-linux)
-override TARGET_RSTS+=math typinfo sysconst rtlconsts
+override TARGET_RSTS+=$(MATHUNIT) typinfo sysconst rtlconsts
 endif
 ifeq ($(CPU_OS_TARGET),i386-linux)
 override CLEAN_UNITS+=$(LINUXUNIT)
@@ -2964,7 +2964,7 @@ linuxvcs$(PPUEXT): $(LINUXVCS_DEPS)
 	$(COMPILER) $(LINUXVCS_OPT) $<
 LinuxApi.Vcs$(PPUEXT): $(NSOSDIR)/LinuxApi.Vcs.pp $(LINUXVCS_DEPS)
 	$(COMPILER) $(LINUXVCS_OPT) $<
-FPCYLIX_DEPS=fpcylix.pp \
+FPCYLIX_DEPS=../linux/fpcylix.pp \
 	     $(CTHREADSUNIT)$(PPUEXT) $(CWSTRINGUNIT)$(PPUEXT) $(DYNLIBSUNIT)$(PPUEXT) \
 	     objpas$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
 	     $(FPCYLIX_DEPS_OS)  $(FPCYLIX_DEPS_CPU)
@@ -3021,7 +3021,7 @@ character$(PPUEXT): $(CHARACTER_DEPS)
 	$(COMPILER) $(CHARACTER_OPT) $<
 System.Character$(PPUEXT): $(NSINC)/System.Character.pas $(CHARACTER_DEPS)
 	$(COMPILER) $(CHARACTER_OPT) -Fi$(OBJPASDIR) $<
-MATH_DEPS= $(OBJPASDIR)/math.pp \
+MATH_DEPS= $(OBJPASDIR)/math.pp $(PROCINC)/mathu.inc \
 	   objpas$(PPUEXT) $(SYSUTILSUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
 	   $(MATH_DEPS_OS) $(MATH_DEPS_CPU)
 math$(PPUEXT): $(MATH_DEPS)
