Set dynlibs related variables

--- a/rtl/haiku/Makefile.fpc
+++ b/rtl/haiku/Makefile.fpc
@@ -55,6 +55,8 @@ UNIXINC=$(RTL)/unix
 HAIKUINC=$(RTL)/haiku
 SYSINITUNITS=si_c si_dllc
 UNITPREFIX=rtl
+DYNLIBS_DEPS_OS=$(DLUNIT)$(PPUEXT)
+DYNLIBSINCDIR=$(UNIXINC)
 
 ifeq ($(ARCH),i386)
 LOADERS=cprt0 dllcprt0
